# NETWORK-TRAFFIC-ANALYSIS-ENGINE

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt  rules.json
include/: dpi_pipeline.h  packet_pool.h  rule_engine.h  types.h
scripts/: dashboard.py
scripts/templates/: index.html
src/: dpi_pipeline.cpp  main.cpp  mock_main.cpp  packet_parser.cpp  packet_pool.cpp  rule_engine.cpp
tests/: test_rate_limits.py  test_sanitization.py  test_security.py
